# strukdat

./: .Makefile.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  strukdat
src/include/: CMakeLists.txt  Makefile  cmake_install.cmake  myFunction.cpp  myFunction.h  nodeDraw.cpp  nodeDraw.h
src/source/: kodePakAkok.cpp  main.cpp  temp  temp.cpp  test  test.cpp
